@@ -1,3 +1,8 @@
+r128:
+New   : command -m, to compress multiple files in a single command
+Fixed : Restored lz4hc compression ratio (slightly lower since r124)
+Added : Visual project directory
+
 r126:
 New : lz4frame API is now integrated into liblz4
 Fixed : GCC 4.9 bug on highest performance settings, reported by Greg Slazinski
